[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/Levels/Primrose/rotation_disabler.gd" type="Script" id=1]
[ext_resource path="res://pisca_gradient.tres" type="Gradient" id=2]
[ext_resource path="res://Axl_mod/Player/Projectiles/BossWeapons/SpiralMagnum/SpiralMagnum.gd" type="Script" id=3]
[ext_resource path="res://src/Effects/Basic Hit.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Sounds/MEDIUM_SHOT2.wav" type="AudioStream" id=5]
[ext_resource path="res://src/Effects/Materials/buster_icarus_particles.tres" type="Material" id=6]
[ext_resource path="res://Axl_mod/Player/Projectiles/BossWeapons/SpiralMagnum/SpiralMagnum.res" type="SpriteFrames" id=7]
[ext_resource path="res://Axl_mod/Player/Projectiles/BossWeapons/RayGun/RayGun_End.png" type="Texture" id=8]
[ext_resource path="res://Axl_mod/Player/Projectiles/BossWeapons/SpiralMagnum/SpiralMagnum_air.png" type="Texture" id=9]
[ext_resource path="res://Axl_mod/SFX/SpiralMagnum_Fire.wav" type="AudioStream" id=10]
[ext_resource path="res://Axl_mod/Player/Projectiles/BossWeapons/SpiralMagnum/SpiralMagnum_catridge.png" type="Texture" id=11]
[ext_resource path="res://Axl_mod/Player/Projectiles/BulletAxl_Start.png" type="Texture" id=12]
[ext_resource path="res://SpriteEffect.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 2.5 )

[sub_resource type="CanvasItemMaterial" id=17]
render_priority = -1
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id=18]
max_value = 360.0
_data = [ Vector2( 0, -72.1454 ), 0.0, 1096.15, 0, 1, Vector2( 1, 1024 ), 1096.15, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=19]
curve = SubResource( 18 )

[sub_resource type="GradientTexture" id=16]
gradient = ExtResource( 2 )

[sub_resource type="ParticlesMaterial" id=20]
flag_rotate_y = true
flag_disable_z = true
direction = Vector3( -2, -3, 0 )
spread = 0.0
gravity = Vector3( 0, 800, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_curve = SubResource( 19 )
color_ramp = SubResource( 16 )
anim_offset = 1.0
anim_offset_random = 1.0

[node name="SpiralMagnum" type="KinematicBody2D" groups=["Player Projectile"]]
z_index = 6
collision_layer = 4
script = ExtResource( 3 )
damage = 7.5
damage_to_bosses = 8.0
damage_to_weakness = 15.0
fire_sound = ExtResource( 10 )
break_guards = true

[node name="animatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 4, 0 )
z_index = 6
frames = ExtResource( 7 )
animation = "Tag"
playing = true

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, -0.5 )
shape = SubResource( 1 )

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 4, -0.75 )
scale = Vector2( 0.6, 0.425 )

[node name="particles2D" type="Particles2D" parent="."]
visible = false
position = Vector2( 10, 0 )
emitting = false
amount = 4
lifetime = 0.54
local_coords = false
process_material = ExtResource( 6 )

[node name="remains_particles" type="Particles2D" parent="."]
material = SubResource( 17 )
position = Vector2( -15, 0 )
z_index = 6
emitting = false
amount = 1
one_shot = true
visibility_rect = Rect2( -600, -100, 1200, 200 )
local_coords = false
process_material = SubResource( 20 )
texture = ExtResource( 11 )

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
visible = false
stream = ExtResource( 5 )
volume_db = -2.303
pitch_scale = 1.08
bus = "SFX"

[node name="Start Particle" parent="." instance=ExtResource( 4 )]
z_index = 7
z_as_relative = false
texture = ExtResource( 12 )
vframes = 1
animation_speed = 40.0
vertical_flip_chance = 0.0

[node name="disabler" type="Node" parent="Start Particle"]
script = ExtResource( 1 )
fade_out = true
delete_after_fade = true

[node name="Hit Particle" parent="." instance=ExtResource( 4 )]
position = Vector2( 4, 0 )
z_index = 1
texture = ExtResource( 8 )
hframes = 3
vframes = 1
animation_speed = 30.0
vertical_flip_chance = 0.0

[node name="disabler" type="Node" parent="Hit Particle"]
script = ExtResource( 1 )
fade_out = true
delete_after_fade = true

[node name="deflect_particle" type="Sprite" parent="."]
visible = false
position = Vector2( 17, 0 )
z_index = 1
texture = ExtResource( 8 )
hframes = 3
script = ExtResource( 13 )
animation_speed = 30.0
one_shot = true

[node name="disabler" type="Node" parent="deflect_particle"]
script = ExtResource( 1 )
fade_out = true
delete_after_fade = true

[node name="disabler" type="Node" parent="."]
script = ExtResource( 1 )
fade_out = true
delete_after_fade = true

[node name="rastro" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.0784314 )
position = Vector2( -22, 0 )
z_index = 5
texture = ExtResource( 9 )
hframes = 4
script = ExtResource( 13 )
animation_speed = 30.0
one_shot = true
vertical_flip_chance = 0.5

[node name="disabler" type="Node" parent="rastro"]
script = ExtResource( 1 )
fade_out = true
undo_on_rotation_end = false
